--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "@redux-devtools/core": "^4.0.0",
     "@redux-devtools/dock-monitor": "^4.0.0",
     "@redux-devtools/log-monitor": "^5.0.0",
